# apero-core

./: .travis.yml  Makefile  apero-core.descr  apero-core.opam  dynload-sys.opam
lib/: a_buf.ml  a_buf.mli  a_bytes.ml  a_bytes.mli  abuf.ml  abuf.mli  abytes.ml  abytes.mli  acommon.ml  acommon.mli  alist.ml  alist.mli  apath.ml  apath.mli  apero.ml  atypes.ml  aunix.ml  common.ml  common.mli  dune  guard.ml  id.ml  id.mli  iobuf.ml  iobuf.mli  json.ml  json.mli  key_value.ml  miobuf.ml  miobuf.mli  mvar.ml  ordered.ml  ordered.mli  pcodec.ml  properties.ml  properties.mli  tcodec.ml  tcodec.mli  uuid.ml  uuid.mli
test/: dune  test_all.ml  test_resource.ml  test_vle.ml
