opam-version: "2.0"
version:"0.4.5"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Oliver Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab"
bug-reports:  "https://github.com/atolab/apero-core/issues/"
dev-repo:     "git+https://github.com/atolab/apero-core.git"

license: "Apache-2.0"


build: [
 ["dune" "build" "--only" "apero-core" "--root" "." "-j" jobs "@install"]
]

depends: [
  "ocaml" {>= "4.03.0" & < "4.08.0"}
  "dune" {>= "1.11.0" & <= "1.11.5"}
  "astring"
  "cmdliner"
  "fmt"
  "logs"
  "lwt"
  "ppx_deriving"
  "uuidm"
  "bigstringaf"
  "lwt_ppx"
  "yojson" {>= "1.6.0" & <= "1.7.0"}
  "ppx_deriving_yojson" {= "3.5"}
  "ocp-ocamlres"
  "atdgen"
]

synopsis : "OCaml Utility Library"
description: """
Apero is collection of OCaml libraries that we use on most of our OCaml code.
These libraries include monoids, applicative functors, monads as well as
some extensions to OCaml Pervasives."""
