opam-version: "2.0"
version:"0.4.6"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Oliver Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab"
bug-reports:  "https://github.com/atolab/apero-core/issues/"
dev-repo:     "git+https://github.com/atolab/apero-core.git"

license: "Apache-2.0"


build: [
 ["dune" "build" "--only" "apero-core" "--root" "." "-j" jobs "@install"]
]

depends: [
  "ocaml" {= "1.11.4"}
  "dune"
  "astring"
  "cmdliner"
  "fmt"
  "logs"
  "lwt" {= "4.5.0"}
  "ppx_deriving"
  "uuidm"
  "bigstringaf"
  "lwt_ppx"
  "yojson"
  "ppx_deriving_yojson"
]

synopsis : "OCaml Utility Library"
description: """
Apero is collection of OCaml libraries that we use on most of our OCaml code.
These libraries include monoids, applicative functors, monads as well as
some extensions to OCaml Pervasives."""
