(library
  (name            apero_core)
  (public_name     apero-core)  
  (wrapped         false)
  (libraries       astring uuidm lwt lwt.unix bigstringaf logs logs.lwt logs.fmt logs.cli yojson ppx_deriving_yojson.runtime fmt fmt.cli fmt.tty cmdliner ppx_deriving)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving_yojson lwt_ppx)))

